# geekuniversity-django-essencial

./: pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/commun/: paginator.py
core/migrations/: 0001_initial.py  0002_cliente.py  0003_produtos_color_code.py  0004_remove_produtos_color_code.py
core/static/css/: estilos.css
core/static/js/: script.js
core/templates/: 500.html  contato.html  index.html  produto.html  teste.html
projeto/: settings.py  urls.py
